# J-Sentinel

./: .gitignore  .jsentinel_scanid  Dockerfile  README.md  analyse.java  analyse_test.java  ast_extract.java  backup.sh  cfg.json  cfg_extract.java  codegraph.json  deploy.sh  dfg_extract.java  docker-entrypoint.sh  graph.py  jsentinel.sh  monitor.sh  scanner.java  scanner_test.java  taint_analysis.json  taint_analysis_api.json  taint_rules.json  update.sh
api-gateway/: pom.xml
cpp-parser/: CMakeLists.txt  cpp_scanner.cpp  cpp_scanner_test.cpp  test_code.cpp
docs/: docs
java-parser/: cfg_extract.java
java-parser/test/: analyse.java
output/: ast.json  cfg.json  codegraph.json  codegraph_java.json  dfg.json  scan.json  taint_analysis.json
react-app/server/: routes.ts  storage.ts
react-app/shared/: schema.ts
rule-engine/: Makefile  build.sh  config.yaml  db_setup.go  detect  detect.py  detect_test.py  go.mod  go.sum  initdb.go  main.go  main_test.go  owasp_vulnerabilities.json  report.json  rules.yaml  run.sh  vulnerability_report.json  vulnerability_report_summary.txt
rule-engine/prot/: config.yaml  detect_test.py  scanner
rule-engine/reports/: 19a34940-7154-4940-bb7e-3ba00b0c48a8.json  3b0d6260-cb1f-47fc-8426-33a7add2359a.json  58b27502-7154-4949-8081-69112c284b8d.json  99af52b6-2954-4572-8d31-f04d8bc615f2.json  c55a557b-8370-4ed0-9b6d-a2a3d7841367.json  d9a672c7-7efe-47d4-a77b-d9349afc052c.json  data.db  scan_2a96d0e7-c8d2-4efd-8526-a552fb46f421.json  scan_2a96d0e7-c8d2-4efd-8526-a552fb46f421_summary.txt  scan_2e17c56a-d9c4-452e-a7b7-c4e330cd56e8.json  scan_2e17c56a-d9c4-452e-a7b7-c4e330cd56e8_summary.txt  scan_40b21246-6696-4ee8-9409-868f8487b794.json  scan_4fd423d0-fbaa-487f-8353-1fa847c19759.json  scan_4fd423d0-fbaa-487f-8353-1fa847c19759_summary.txt  scan_report.json  (+4 more)
test/: CrossMethodTaintTest.java  FileReadTaintTest.java  LogInjectionTest.java  SQLi.java  SafeInputTest.java  test.java  test.py  test_code.cpp
(+33 files in other folders)
